<resources>
    <string name="app_name">Aktifitas 7_2</string>

    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_activity_admin">Halaman Admin</string>
    <string name="button_login">LOGIN</string>
    <string name="button_register">REGISTER</string>
    <string name="button_logout">LOGOUT</string>
    <string name="button_exit">KELUAR</string>
</resources>